[package]
authors = ["Will Harris <will.t.harris@protonmail.com>"]
edition = "2018"
name = "todo-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = {version = "1.0.104", features = ["derive"]}
